Fix notes api path
